--- a/Backend/package.json
+++ b/Backend/package.json
@@ -52,6 +52,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.6",
     "node-gcm": "^1.1.3",
+    "openai": "^4.53.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "prisma": "^4.13.0",
